# brt-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml  ci.yml
brt_platform/: config.py  exceptions.py
brt_platform/api/: server.py
brt_platform/api/middleware/: auth.py
brt_platform/api/routes/: health.py  ingest.py  query.py
brt_platform/core/: alerting.py  collection_manager.py  connection_pool.py  embedder.py  hookable.py  rag_engine.py  reranker.py  resilience.py  streaming.py
brt_platform/utils/: platform.py
deployments/client-template/: .env.template  docker-compose.yml
invoicing/: invoice-template.md
marketing/: case-study-rstp.md  freelancer-packages.md
scripts/: check-scope-discipline.sh  deploy-client.sh  generate-invoice.py  instant-poc.sh  verify-platform.py
tests/: conftest.py  test_config.py  test_rag_engine.py
