[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brt-platform"
version = "0.1.0"
description = "BRT Platform — SADC AI Orchestration & RAG System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BUSL-1.1"}
authors = [
    {name = "BRT Inc. (Pre-Inc.)", email = "info@brtinc.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.45.0",
    "redis[hiredis]>=5.0.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.7.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "RestrictedPython>=7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=0.8.0",
    "httpx>=0.27.0",
    "watchfiles>=1.0",
    "ruff>=0.4.0",
    "pip-tools>=7.0",
]
analytics = [
    "kafka-python>=2.0.3",
    "clickhouse-connect>=0.8.0",
]
data-platform = [
    "apache-airflow>=2.9.0",
    "faust-streaming>=0.11.0",
]

[project.urls]
Homepage = "https://brtinc.dev"
Repository = "https://github.com/CBahtaria/brt-platform"

[tool.setuptools.packages.find]
include = ["brt_platform*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
